--- a/404.html
+++ b/404.html
@@ -5,6 +5,13 @@
     <title>React for GitHub Pages</title>
   </head>
   <body>
+    <!--
+    This script takes the current url and converts the path, query and
+    hash frgment into just a query string, and then redirects the browser to
+    the new url with only a query string and no path or hash fragment,
+    e.g. http://www.foo.tld/one/two?a=b&c=d#qwe, becomes
+    http://www.foo.tld/?redirect=true&pathname=%2Fone%2Ftwo&query=a=b%26c=d&hash=qwe
+    -->
     <script type="text/javascript">
       function noAmp(text) {
         return text.split('&').join('%26');
