Make query onEnter hook more robust

--- a/404.html
+++ b/404.html
@@ -28,7 +28,7 @@
         '&query=' + query +
         '&hash=' + hash;
 
-      location.replace(redirectTo);
+      window.location.replace(redirectTo);
     </script>
   </body>
 </html>
