--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>React for GitHub Pages</title>
+    <title>Single Page Apps for GitHub Pages</title>
   </head>
   <body>
     <script type="text/javascript">
