--- a/404.html
+++ b/404.html
@@ -9,36 +9,24 @@
       // Single Page Apps for GitHub Pages
       // https://github.com/rafrex/spa-github-pages
       // ----------------------------------------------------------------------
-      // This script takes the current url and converts the path, query and
-      // hash fragment into just a query string, and then redirects the browser
-      // to the new url with only a query string and no path or hash fragment,
+      // This script takes the current url and converts the path and query
+      // string into just a query string, and then redirects the browser
+      // to the new url with only a query string and hash fragment,
       // e.g. http://www.foo.tld/one/two?a=b&c=d#qwe, becomes
-      // http://www.foo.tld/?redirect=true&pathname=%2Fone%2Ftwo&query=a=b%26c=d&hash=qwe
+      // http://www.foo.tld/?redirect=true&pathname=/one/two&query=a=b%26c=d#qwe
+      // Note: this 404.html file must be at least 512 bytes for it to work
+      // with Internet Explorer (it is currently > 512 bytes)
       /////////////////////////////////////////////////////////////////////////
 
-      // Remove '&' from text and replace with '%26'
-      function noAmp(text) {
-        return text.split('&').join('%26');
-      }
+      var l = window.location;
+      l.replace(
+        l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
+        '/?' + 'redirect=true' +
+        (l.pathname ? '&pathname=' + l.pathname.replace(/&/g, '%26') : '') +
+        (l.search ? '&query=' + l.search.replace(/&/g, '%26') : '') +
+        l.hash
+      );
 
-      // Incase browser doesn't support window.location.origin
-      function getOrigin() {
-        return window.location.protocol + '//' + window.location.hostname +
-        (window.location.port ? ':' + window.location.port : '');
-      }
-
-      var origin = window.location.origin ? window.location.origin : getOrigin();
-      var pathname = noAmp(window.location.pathname.split('/').join('%2F'));
-      var query = noAmp(window.location.search.slice(1));
-      var hash = noAmp(window.location.hash.slice(1));
-
-      var redirectTo = origin + '/?' +
-      'redirect=true' +
-      '&pathname=' + pathname +
-      '&query=' + query +
-      '&hash=' + hash;
-
-      window.location.replace(redirectTo);
     </script>
   </head>
   <body>
