--- a/index.html
+++ b/index.html
@@ -429,6 +429,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Single Page Apps for GitHub Pages</title>
 
+    <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
 
       /////////////////////////////////////////////////////////////////////////
@@ -475,7 +476,9 @@
         }
       }(window.location))
     </script>
+    <!-- End Single Page Apps for GitHub Pages -->
 
+    <!-- Start Google Analytics -->
     <script>
       if (window.location.hostname === 'spa-github-pages.rafrex.com') {
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -492,6 +495,7 @@
           'please remove the script from the index.html file.');
       }
     </script>
+    <!-- Start Google Analytics -->
 
   </head>
   <body>
