--- a/index.html
+++ b/index.html
@@ -468,8 +468,8 @@
           });
           if (q.redirect === 'true') {
             window.history.replaceState(null, null,
-              (q.pathname ? q.pathname : '') +
-              (q.query ? q.query : '') +
+              (q.pathname || '') +
+              (q.query || '') +
               l.hash
             );
           }
