Add license to redirect scripts

--- a/404.html
+++ b/404.html
@@ -8,6 +8,7 @@
       /////////////////////////////////////////////////////////////////////////
       // Single Page Apps for GitHub Pages
       // https://github.com/rafrex/spa-github-pages
+      // Copyright (c) 2016 Rafael Pedicini, licensed under the MIT License
       // ----------------------------------------------------------------------
       // This script takes the current url and converts the path and query
       // string into just a query string, and then redirects the browser
