--- a/404.html
+++ b/404.html
@@ -19,11 +19,18 @@
       // with Internet Explorer (it is currently > 512 bytes)
       /////////////////////////////////////////////////////////////////////////
 
+      // If you're creating a Project Pages site and NOT using a custom domain,
+      // then set pathPrefix = true. This way the repo name will remain in the path:
+      // https://username.github.io/repo-name/one/two?a=b&c=d#qwe becomes
+      // https://username.github.io/repo-name/?p=/one/two&q=a=b~and~c=d#qwe
+      // Otherwise, leave pathPrefix as false.
+      var pathPrefix = false;
+
       var l = window.location;
       l.replace(
         l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-        '/?' +
-        (l.pathname ? 'p=' + l.pathname.replace(/&/g, '~and~') : '') +
+        l.pathname.split('/').slice(0, 2 * pathPrefix).join('/') + '/?p=/' +
+        l.pathname.slice(1).split('/').slice(pathPrefix).join('/').replace(/&/g, '~and~') +
         (l.search ? '&q=' + l.search.slice(1).replace(/&/g, '~and~') : '') +
         l.hash
       );
