Update comment in 404.html

--- a/404.html
+++ b/404.html
@@ -17,9 +17,9 @@
       // with Internet Explorer (it is currently > 512 bytes)
 
       // If you're creating a Project Pages site and NOT using a custom domain,
-      // then set segmentCount to the number of segments in your path. This
-      // way the code will only replace the route part of the path, and not
-      // the real directory in which the app resides:
+      // then set segmentCount to 1 (enterprise users may need to set it to > 1).
+      // This way the code will only replace the route part of the path, and not
+      // the real directory in which the app resides, for example:
       // https://username.github.io/repo-name/one/two?a=b&c=d#qwe becomes
       // https://username.github.io/repo-name/?p=/one/two&q=a=b~and~c=d#qwe
       // Otherwise, leave segmentCount as 0.
