--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     The Dollar Effect is a monthly subscription of $1 dollar to a non-profit of your choice.">
     <meta name="Keywords" content="Donation, Help, Funding, Subscription, Organizations, Benefits, The Dollar Effect, Charity">
     <meta property="og:title" content="The Dollar Effect" />
-    <meta property="og:image" content="http://thedollareffect.com/img/hero-image.jpg" />
+    <meta property="og:image" content="https://thedollareffect.com/img/hero-image.jpg" />
     <meta property="og:site_name" content="The Dollar Effect" />
     <meta property="og:description" content="The Dollar Effect is a monthly subscription of $1 dollar to a non-profit of your choice."/>
     <title>Dollar Effect - The Dollar Effect is a monthly subscription of $1 dollar to a non-profit of your choice.</title>
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="/css/main.css">
 
 </head>
 
@@ -31,9 +31,7 @@
                     <p class="mb30">We believe that non-profits should focus more on what they are doing instead of worrying about funds for the following months.</p>
                     <p class="mb50">The Dollar Effect is a monthly subscription of $1 dollar to a non-profit of your choice.</p>
                     <div>
-                        <!-- <button class="btn btn-primary" data-toggle="modal" data-target="#modalDonate">Donate</button> -->
-                        <a href="#glory_reborn_feature" class="btn btn-primary">Donate</a>
-                        
+                        <button class="btn btn-primary" data-toggle="modal" data-target="#modalDonate">Donate</button>
                         <button class="btn btn-link" id="btnLearnMore">Learn More</button>
                     </div>
                 </div>
@@ -115,7 +113,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row" id="glory_reborn_feature">
+            <div class="row">
                 <div class="col-xl-10 offset-xl-1">
                     <div class="de-panel">
                         <div class="featured-image">
@@ -365,7 +363,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.0/moment.min.js"></script>
     
-    <script src="js/bundle.js"></script>
+    <script src="/js/bundle.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-101091227-2"></script>
     <script>
