index.html button donate changes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                     <p class="mb30">We believe that non-profits should focus more on what they are doing instead of worrying about funds for the following months.</p>
                     <p class="mb50">The Dollar Effect is a monthly subscription of $1 dollar to a non-profit of your choice.</p>
                     <div>
-                        <button class="btn btn-primary" data-toggle="modal" data-target="#modalDonate">Donate</button>
+                        <!-- <button class="btn btn-primary" data-toggle="modal" data-target="#modalDonate">Donate</button> -->
+                        <a href="#glory_reborn_feature" class="btn btn-primary">Donate</a>
                         <button class="btn btn-link" id="btnLearnMore">Learn More</button>
                     </div>
                 </div>
@@ -105,7 +106,7 @@
     
     <section class="ptb100">
         <div class="container">
-            <div class="row">
+            <div class="row" >
                 <div class="col-lg-8 offset-lg-2 text-center">
                     <div class="section-header mb50">
                         <h3>Featured Non-Profit</h3>
@@ -113,7 +114,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row" id="glory_reborn_feature">
                 <div class="col-xl-10 offset-xl-1">
                     <div class="de-panel">
                         <div class="featured-image">
