--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row" id="glory_reborn_feature">
                 <div class="col-xl-10 offset-xl-1">
                     <div class="de-panel">
                         <div class="featured-image">
